docs/v2.0.4/_sources/gallery/alpha_profile/plot_alpha_profile_1.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/alpha_profile/plot_alpha_profile_1.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_alpha_profile_plot_alpha_profile_1.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_alpha_profile_plot_alpha_profile_1.py:


Symmetric coupler z-profile
===========================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

Importing the script dependencies

.. GENERATED FROM PYTHON SOURCE LINES 8-13

.. code-block:: Python

    from SuPyMode.workflow import AlphaProfile


    profile = AlphaProfile(symmetric=True, add_end_of_taper_section=True)








.. GENERATED FROM PYTHON SOURCE LINES 14-15

Adding a first taper segment with large initial heating length (i.e. slow reduction)

.. GENERATED FROM PYTHON SOURCE LINES 15-21

.. code-block:: Python

    profile.add_taper_segment(
        alpha=0,
        initial_heating_length=8e-3,
        stretching_length=0.2e-3 * 20
    )








.. GENERATED FROM PYTHON SOURCE LINES 22-23

Adding a first taper segment with small initial heating length (i.e. steep reduction)

.. GENERATED FROM PYTHON SOURCE LINES 23-35

.. code-block:: Python

    profile.add_taper_segment(
        alpha=0,
        initial_heating_length=2e-3,
        stretching_length=0.2e-3 * 20
    )

    profile.initialize()


    profile.plot()

    # -



.. image-sg:: /gallery/alpha_profile/images/sphx_glr_plot_alpha_profile_1_001.png
   :alt: Minimum ITR: 0.2895, Minimum ITR: 0.2895, Minimum ITR: 0.2895
   :srcset: /gallery/alpha_profile/images/sphx_glr_plot_alpha_profile_1_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.502 seconds)


.. _sphx_glr_download_gallery_alpha_profile_plot_alpha_profile_1.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_alpha_profile_1.ipynb <plot_alpha_profile_1.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_alpha_profile_1.py <plot_alpha_profile_1.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_alpha_profile_1.zip <plot_alpha_profile_1.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
